eliminar etiquetas vacias

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--  MEJORAR EL SEO -->
-    <meta name="description"
-        content="Tienda de ropa vintage con prendas únicas. Moda retro, auténtica y sostenible que marca tu estilo. Ofertas exclusivas.">
+    <meta name="description"content="Tienda de ropa vintage con prendas únicas. Moda retro, auténtica y sostenible que marca tu estilo. Ofertas exclusivas.">
     <link rel="shortcut icon" href="assets/img/Logoretrodenda-provisional.webp" type="image/x-icon">
     <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>RetroDenda | Ropa Vintage y Retro</title>
@@ -24,7 +24,6 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="pages/productos.html">Productos</a></li>
-                <li><a href="#">Quiénes somos</a></li>
             </ul>
             <div class="language-menu">
                 <ul>
@@ -32,9 +31,6 @@
                     <li>ENG</li>
                     <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
-            </div>
-            <div class="basket-btn"> <!-- botón para ir al carrito -->
-                <img>
             </div>
         </nav>
     </header>
