--- a/pages/legal.html
+++ b/pages/legal.html
@@ -11,7 +11,7 @@
 
 
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title>RetroDenda | Ropa Vintage y Retro</title>
+    <title>Informacion legal | RetroDenda Ropa Vintage y Retro</title>
 
 </head>
 <style>
@@ -61,7 +61,6 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="pages/productos.html">Productos</a></li>
-                <li><a href="#">Quiénes somos</a></li>
             </ul>
             <div class="language-menu">
                 <ul>
@@ -69,9 +68,6 @@
                     <li>ENG</li>
                     <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
-            </div>
-            <div class="basket-btn"> <!-- botón para ir al carrito -->
-                <img>
             </div>
         </nav>
     </header>
