--- a/pages/productos.html
+++ b/pages/productos.html
@@ -20,6 +20,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/productos.html">Productos</a></li>
                 <li><a href="#">Quiénes somos</a></li>
+                <li><a href="../pages/registro.html">Registro</a></li>
             </ul>
             <div class="language-menu">
                 <ul>
