--- a/pages/registro.html
+++ b/pages/registro.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
     <title>Tienda Vintage - Productos</title>
+    <link rel="stylesheet" href="/assets/css/style.css"> 
+     <link rel="stylesheet" href="/assets/css/registro.css">
+   
 
-      <link rel="stylesheet" href="/assets/css/registro.css">
 </head>
 <body>
 <header>
@@ -14,19 +17,23 @@
     </div>
     <nav>
         <ul>
-            <li>Inicio</li>
-            <li>Productos</li>
-            <li>Quiénes somos</li>
-            <li>Registro</li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../pages/productos.html">Productos</a></li>
+            <li><a href="#">Quiénes somos</a></li>
+            <li><a href="../pages/registro.html">Registro</a></li>
         </ul>
         <div class="language-menu">
             <ul>
+                <li><a href="#"><i class="fa-solid fa-circle-user"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+
                 <li>EUS</li>
                 <li>ENG</li>
+                
             </ul>
         </div>
         <div class="basket-btn">
-            <img src="/assets/img/" alt="Carrito">
+            <img>
         </div>
     </nav>
 </header>
