unificacion de ramas a 12-12 a las 10 y cuarto

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
             </ul>
             <div class="language-menu">
                 <ul>
+                    <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
+                    <li><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+
                     <li>EUS</li>
                     <li>ENG</li>
-                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+
                 </ul>
             </div>
         </nav>
