--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
             <div class="language-menu">
                 <ul>
                     <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
-                    <li><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-
+                    <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                     <li>EUS</li>
                     <li>ENG</li>
-
                 </ul>
             </div>
         </nav>
