--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--  MEJORAR EL SEO -->
+    <meta name="description"content="Tienda de ropa vintage con prendas únicas. Moda retro, auténtica y sostenible que marca tu estilo. Ofertas exclusivas.">
+    <link rel="shortcut icon" href="/assets/img/Logoretrodenda-provisional.webp" type="image/x-icon">
     <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
-    <title>Tienda Vintage - Productos</title>
+
     <link rel="stylesheet" href="/assets/css/productos.css">
-       <link rel="stylesheet" href="/assets/css/style.css">       
+    <link rel="stylesheet" href="/assets/css/style.css">    
+    <title>Productos | RetroDenda Ropa Vintage y Retro</title>   
 </head>
 
 <body>
@@ -19,18 +23,14 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/productos.html">Productos</a></li>
-                <li><a href="#">Quiénes somos</a></li>
-                <li><a href="../pages/registro.html">Registro</a></li>
             </ul>
             <div class="language-menu">
                 <ul>
+                    <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
+                    <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                     <li>EUS</li>
                     <li>ENG</li>
-                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
-            </div>
-            <div class="basket-btn"> <!-- botón para ir al carrito -->
-                <img>
             </div>
         </nav>
     </header>  
