--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -7,6 +7,7 @@
     <title>detalle de producto</title>
     <link rel="stylesheet" href="../assets/css/Detalle.css">
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
 
 </head>
 
@@ -36,24 +37,21 @@
         </nav>
     </header>  
 
-    <!-- el reloj -->
 
-        <br>
-    <div id="reloj">fgdgfgd</div>
-    <br>
 
-  <select id="idioma">
+<!--<select id="idioma">
   <option value="" disabled selected>Selecciona idioma</option>
   <option value="eng">eng</option>
   <option value="esp">esp</option>
-</select>
+</select>-->
 
     <!-- tarjeta del producto -->
     <h2>Tu producto</h2>
 
     <div style="margin-left:1rem; margin-bottom: 1.5rem;">
         <a href="productos.html" style="text-decoration: none;">Volver a productos</a>
-        <p style="display:inline; background-color: #9c5847; color: rgb(255, 255, 255);" id="categoria"></p>
+        <p style="display:inline-block">|</p>
+        <p class="marca" id="categoria"></p>
     </div>
 
     <div class="contenedor">
@@ -93,10 +91,10 @@
         <div class="modal-content">
             <div>
                 <p id="infocompra"></p>
-                <a href="nnn.html" class="boton3">ir a carrito</a>
+                <a href="cart.html" class="boton3">ir a carrito</a>
                 <br>
-                <button id="borrarcarrito" class="boton">borrar carrito</button>
-                <button id="seguircompra" class="boton">Seguir comprando</button>
+                    <button id="borrarcarrito" class="boton">borrar carrito</button>
+                    <button id="seguircompra" class="boton">Seguir comprando</button>
             </div>
         </div>
     </div>
