cart update 7 12dic2025

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -106,6 +106,6 @@
     </div>
 
 
-    <script src="../assets/js/cart.js"></script>
+    <script type="module" src="../assets/js/cart.js"></script>
 </body>
 </html>
