--- a/pages/eng/productos.html
+++ b/pages/eng/productos.html
@@ -4,23 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>detalle de producto</title>
-    <link rel="stylesheet" href="../assets/css/Detalle.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
-
+    <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
+    <title>Tienda Vintage - Productos</title>
+    <link rel="stylesheet" href="/assets/css/productos.css">
+       <link rel="stylesheet" href="/assets/css/style.css">       
 </head>
 
 <body>
-
-    <!--barra navegacion-->
-     <header>
+  <header>
         <div class="header-logo">
             <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
         </div>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/productoseng.html">Store</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="productos.html">Products</a></li>
                 <li><a href="#">Team</a></li>
             </ul>
             <div class="language-menu">
@@ -36,70 +34,36 @@
         </nav>
     </header>  
 
-
-
-    <div id="reloj">fgdgfgd</div>
-    <br>
-
-  <select id="idioma">
-    <option value="" disabled selected>Selecciona idioma</option>
+    <select id="idioma">
+    <option value="" disabled selected>Select language</option>
   <option value="eng">eng</option>
   <option value="esp">esp</option>
 </select>
 
+    <div class="containerform">
 
-    <!-- tarjeta del producto -->
-    <h2>your product</h2>
+        <form class="filtro">
 
-    <div style="margin-left:1rem; margin-bottom: 1.5rem;">
-        <a href="productos.html" style="text-decoration: none;">Return to products</a>
-        <p style="display:inline; background-color: #9c5847; color: rgb(255, 255, 255);" id="categoria"></p>
-    </div>
+            <label for="categoria">Category:</label>
+            <select id="categoria" name="categoria">
+                <option value="todas">All</option>
+                <option value="camisas">Shirts</option>
+                <option value="zapatos">Shoes</option>
+                <option value="bolsos">Bags</option>
+                <option value="pantalones">Trousers</option>
+            </select>
 
-    <div class="contenedor">
-        <!--imagen-->
-        <div class="cuadrofoto">
-            <img src="" class="foto" id="foto" alt="">
-        </div>
-        <div class="cuadroinfo">
-            <!--informacion-->
-            <div class="cuadrotexto" id="cuadro">
-            </div>
-            <!--botones-->
-            <div class="cuadrotexto">
-                <h2>Amount:</h2>
-                <div>
-                    <button id="botonrestar" class="boton">-</button>
-                    <p id="cantidad" style="display: inline;">cantidad</p>
-                    <button id="botonsumar" class="boton">+</button>                    
-                </div>
-                <br>
-                <button id="añadir" class="boton2">add to the cart</button>
 
-            </div>
-        </div>
+        </form>
+
+        <button id="botonfiltro">Filter</button>
     </div>
 
 
-    <!--recomendaciones-->
-    <h2>you might also like</h2>
-    <div class="contenedor2" id="contenedor2">
+    <!--PRODUCTOS-->
+    <section id="container">
+    </section>
 
-    </div>
-
-    <!-- Cuadro modal -->
-    <div id="modal" class="modal">
-
-        <div class="modal-content">
-            <div>
-                <p id="infocompra"></p>
-                <a href="nnn.html" class="boton3">go to cart</a>
-                <br>
-                <button id="borrarcarrito" class="boton">delete cart</button>
-                <button id="seguircompra" class="boton">Continue shopping</button>
-            </div>
-        </div>
-    </div>
 
 
  <!-- -------------------------------------------------------------------------------------------
@@ -119,9 +83,9 @@
             <section class="footer-section-2">
                 <div>
                     <ul>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#cookies">Cookies</a></li>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Legal Notice</a></li>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#privacidad">Privacy</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/eng/legal.html#cookies">Cookies</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/eng/legal.html#aviso">Legal notice</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/eng/legal.html#privacidad">Privacy</a></li>
                     </ul>
                 </div>
             </section>
@@ -149,12 +113,10 @@
     </footer>
 
 
-    <!--javascript-->
-    <script type="module" src="../assets/js/detalle.js"></script>
-    <script src="../assets/js/fecha.js"></script>
-    <script src="../assets/js/traduccion.js"></script>
 
-
+    <script type="module" src="../../assets/js/productos.js"></script> 
+    <script type="module" src="../../assets/js/catalogo.js"></script>
+       <script src="../../assets/js/traduccion.js"></script>
 </body>
 
 </html>
