--- a/pages/registro.html
+++ b/pages/registro.html
@@ -29,7 +29,7 @@
                     <a href="#"><i class="fa-solid fa-circle-user"></i></a>
                     <div class="dropdown">
                         <a href="/registro.html">Registrarte</a>
-                        <a href="/login.html">Iniciar sesión</a>
+                        <a href="/login.html" class="open-login">Iniciar sesión</a>
                     </div>
                 </li>
 
@@ -68,7 +68,7 @@
     <p class="login-text">
         ¿Ya tienes cuenta?
         <br>
-        <a href="/login">Inicia sesión</a>
+       <a href="/login.html" class="open-login">Iniciar sesión</a>
     </p>
 
 
@@ -91,7 +91,7 @@
             <label for="loginPassword">Contraseña:</label>
             <input type="password" id="loginPassword" name="loginPassword" placeholder="********" required>
 
-            <button type="submit">Iniciar sesión</button>
+            <button type="open-login" class="open-login">Iniciar sesión</button>
         </form>
     </div>
 </div>
