--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li>EUS</li>
                     <li>ENG</li>
                 </ul>
-                <div id="reloj">fgdgfgd</div>
+                <div id="reloj"></div>
             </div>
         </nav>
     </header>
