responsive el cuerpo de pagina home

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <section class="footer-section-1">
                 <div>
                     <h4 class="title-page">RetroDenda</h4>
-                    <figure class="header-logo">
+                    <figure class="footer-logo">
                         <img src="assets/img/Logoretrodenda-provisional.webp" alt="">
                     </figure>
                 </div>  
