--- a/index.html
+++ b/index.html
@@ -26,12 +26,21 @@
             </ul>
             <div class="language-menu">
                 <ul>
-                    <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
+                 
+                    <li class="user-menu" id="userMenu">
+                        <a href="#"><i class="fa-solid fa-circle-user"></i></a>
+                        <div class="dropdown">
+                            <a href="/pages/registro.html">Registrarte</a>
+                            <a href="#" class="open-login">Iniciar sesión</a>
+                        </div>
+                    </li>
+
+                   
                     <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                     <li>EUS</li>
                     <li>ENG</li>
                 </ul>
-                <div id="reloj">fgdgfgd</div>
+                <div id="reloj"></div>
             </div>
         </nav>
     </header>
@@ -124,6 +133,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/modal.js"></script>
     <script src="assets/js/carrusel.js"></script>
+    <script src="assets/js/registro.js"></script>
     <script type="module" src="assets/js/destacados.js"></script>
 </body>
 </html>
