--- a/pages/registro.html
+++ b/pages/registro.html
@@ -26,7 +26,7 @@
             <ul>
                 
                 <li class="user-menu">
-                    <a href="#"><i class="fa-solid fa-circle-user"></i></a>
+                    <a href="registro.html"><i class="fa-solid fa-circle-user"></i></a>
                     <div class="dropdown">
                         <a href="/registro.html">Registrarte</a>
                         <a href="/login.html" class="open-login">Iniciar sesión</a>
