--- a/pages/registro.html
+++ b/pages/registro.html
@@ -52,8 +52,7 @@
 
     <h2>Unete a nuestra tienda</h2> 
 
-    <form class="registro-form" >
-
+    <form class="registro-form"  id="registroForm">
     <label for="nombre">Nombre </label>
     <input id="nombre" type="text" name="nombre" placeholder="Nombre" required>
 
