--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
         <div class="header-logo">
             <img src="assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
         </div>
+          <input type="checkbox" id="menu-toggle" class="menu-toggle">
+          <label for="menu-toggle" class="menu-icon">☰</label>
         <nav>
-            <ul>
+            <ul class="menu-principal">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="pages/productos.html">Productos</a></li>
             </ul>
-            <div class="language-menu">
-                <ul>
+
+            <div class="registro-cart">
+                <ul class="iconos-nav">
                     <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
                     <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                    <li>EUS</li>
-                    <li>ENG</li>
                 </ul>
                 <div id="reloj">fgdgfgd</div>
             </div>
