--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -161,8 +161,8 @@
     <!--javascript-->
     <script type="module" src="../assets/js/detalle.js"></script>
     <script src="../assets/js/fecha.js"></script>
-    <script src="../assets/js/traduccion.js"></script>
-
+    <!--<script src="../assets/js/traduccion.js"></script>-->
+    
 
 </body>
 
