--- a/pages/cart.html
+++ b/pages/cart.html
@@ -63,7 +63,7 @@
             <section class="footer-section-1">
                 <div>
                     <h4 class="title-page">RetroDenda</h4>
-                    <figure class="header-logo">
+                    <figure class="footer-logo">
                         <img src="/assets/img/Logoretrodenda-provisional.webp" alt="">
                     </figure>
                 </div>  
@@ -100,11 +100,6 @@
             <p>Copyright 2025 | Hilos i</p>
         </section>
     </footer>
-
-    <div class="endfooter">
-        <p>(c) 2025 Hilos i</p>
-    </div>
-
 
     <script type="module" src="../assets/js/cart.js"></script>
 </body>
