--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -8,34 +8,34 @@
     <link rel="stylesheet" href="../assets/css/Detalle.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
+     <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
     <!--barra navegacion-->
-     <header>
+    <header>
         <div class="header-logo">
             <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
         </div>
+          <input type="checkbox" id="menu-toggle" class="menu-toggle">
+          <label for="menu-toggle" class="menu-icon">☰</label>
         <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/productos.html">Productos</a></li>
-                <li><a href="#">Quiénes somos</a></li>
+            <ul class="menu-principal">
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
             </ul>
-            <div class="language-menu">
-                <ul>
-                    <li>EUS</li>
-                    <li>ENG</li>
-                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+
+            <div class="registro-cart">
+                <ul class="iconos-nav">
+                    <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
+                    <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
-            </div>
-            <div class="basket-btn"> <!-- botón para ir al carrito -->
-                <img>
+                <div id="reloj">fgdgfgd</div>
             </div>
         </nav>
-    </header>  
+    </header>
 
 
 
