resstructurando color de fondo y letras

--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
         </div>
         <section class="footer-section-3">
             <div class="footer-socials">
-                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                <div style="border-right: white 4px solid;padding-right: 1rem;">
                     <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
-                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                <div style="border-right:  white  4px solid;padding-right: 1rem;">
                     <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                <div style="border-right:  white  4px solid;padding-right: 1rem;">
                     <a href="https://x.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                 </div>
-                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                <div style="border-right:  white  4px solid;padding-right: 1rem;">
                     <a href="https://www.youtube.com/?app=desktop&hl=es" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                 </div>
                 <div>
