--- a/pages/nav.html
+++ b/pages/nav.html
@@ -12,7 +12,7 @@
         .navcontenedor {
             display: flex;
             align-items: center;
-            background-color: rgb(94, 187, 91);
+            background-color: rgb(54, 163, 51);
             animation: slideDown 0.8s ease-out forwards;
         }
         
@@ -58,7 +58,7 @@
         }
 
         .nav2 a {
-            color: rgb(0, 0, 0);
+            color: white;
             font-size: 0.9rem;
             text-decoration: none;
         }
