cart.js comments for presentation

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -8,31 +8,33 @@
   <link rel="shortcut icon" href="/assets/img/Logoretrodenda-provisional.webp" type="image/x-icon">
   <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/assets/css/checkout.css">
   <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/checkout.css">
+
 </head>
 
 <body>
-  <header>
-    <div class="header-logo">
-      <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenta">
-    </div>
+    <header>
+        <div class="header-logo">
+            <img src="assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
+        </div>
+          <input type="checkbox" id="menu-toggle" class="menu-toggle">
+          <label for="menu-toggle" class="menu-icon">☰</label>
+        <nav>
+            <ul class="menu-principal">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="pages/productos.html">Productos</a></li>
+            </ul>
 
-    <nav>
-      <ul>
-        <li><a href="/index.html">Inicio</a></li>
-        <li><a href="/pages/productos.html">Productos</a></li>
-      </ul>
-
-      <div class="language-menu">
-        <ul>
-          <li>EUS</li>
-          <li>ENG</li>
-          <li><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+            <div class="registro-cart">
+                <ul class="iconos-nav">
+                    <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
+                    <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+                <div id="reloj"></div>
+            </div>
+        </nav>
+    </header>
 
   <main>
     <h2>FORMULARIO DE COMPRA</h2>
