--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -22,8 +22,8 @@
           <label for="menu-toggle" class="menu-icon">☰</label>
         <nav>
             <ul class="menu-principal">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/productos.html">Productos</a></li>
             </ul>
 
             <div class="registro-cart">
