--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="registro-cart">
                 <ul class="iconos-nav">
-                    <li><a href="/pages/intranet.html"><i class="fa-solid fa-user-tie"></i></a></li>
+                    <li><a href="/pages/admin_productos.html"><i class="fa-solid fa-user-tie"></i></a></li>
                     <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
                     <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
