trabajando en administracion de productos

--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -8,9 +8,15 @@
 <body>
 
      
-    <table id="salida">
+   <!--<table id="salida">
  
-    </table>
+    </table>-->
+
+<div id="contenedor"></div>
+    
     <script type="module" src="../assets/js/admin_productos.js"></script>
+
+
+
 </body>
 </html>
