intranet js primera parte

--- a/pages/intranet.html
+++ b/pages/intranet.html
@@ -39,7 +39,14 @@
         <section class="cart-items">
     
             <h2>Panel de administración de Productos</h2>
-            <div id="cart-items"></div>
+            <div id="cart-items">
+                <img id="cart-items-image" alt="">
+                <input type="text" id="cart-items-name">
+                <input type="text" id="cart-items-">
+
+
+
+            </div>
     
         </section>
 
