trabajando en administracion de productos, añadiendo funciones

--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -12,7 +12,19 @@
  
     </table>-->
 
+<form id="formulario-articulo">
+    <input type="text" id="nombre-articulo" placeholder="Nombre del artículo" required>
+    <input type="text" id="categoria-articulo" placeholder="Categoría" required>
+    <input type="text" id="talla-articulo" placeholder="Talla" required>
+    <input type="text" id="descripcion-articulo" placeholder="Descripción" required>
+    <input type="number" id="precio-articulo" placeholder="Precio" step="0.01" required>
+    <input type="number" id="stock-articulo" placeholder="Stock" required>
+    <button type="submit">Añadir artículo</button>
+</form>
+
 <div id="contenedor"></div>
+
+
     
     <script type="module" src="../assets/js/admin_productos.js"></script>
 
