--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        form {
+            max-width: 300px;
+            margin: 2rem;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        }
+        form input{
+            display: block;
+            margin: 1rem;
+        }
+        form button{
+            display: block;
+            margin: 1rem;
+        }
+    </style>
 </head>
 <body>
 
