--- a/pages/intranet.html
+++ b/pages/intranet.html
@@ -34,6 +34,16 @@
     </header> 
     
     <main>
+
+    <!-- TARJETA QUE TENDRA LA SECCION PARA ESCRIBIR EL PRODUCTO AGREGAR -->
+     <section class="agregar-productos">
+        <form action="">
+            
+        </form>
+     </section>
+
+
+
   
         <!-- Columna izquierda: productos -->
         <section class="cart-items">
