--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -41,8 +41,8 @@
 
 
     
-    <script type="module" src="../assets/js/admin_productos.js"></script>
-
+    <!--<script type="module" src="../assets/js/admin_productos.js"></script>-->
+    <script type="module" src="../assets/js/admin_productos_v2.js"></script>
 
 
 </body>
