trabajando en admin productos

--- a/pages/practica_intranet.html
+++ b/pages/practica_intranet.html
@@ -34,8 +34,37 @@
     <main>
         <h1>PANEL DE ADMINISTRACION </h1>
 
+        <section class="container-tabla">
+            <button id="abrirModal">crear</button>
+            <table class="container-productos">
+                <thead>
+                <tr>
+                    <th>Imagen</th>
+                    <th>Id</th>
+                    <th class="descrip">Descripicion</th>
+                    <th>Categoria</th>
+                    <th>Precio</th>
+                    <th>Talla</th>
+                    <th>Stock</th>
+                    <th class="acciones">Acciones</th>
+                </tr>
+                </thead>
 
+                <tbody class="prouctos-item">
 
+                </tbody>
+            </table>
+
+        </section>
+
+        <!-- Modal -->
+         <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="cerrar-modal">x</span>
+                
+            </div>
+
+         </div>
 
 
 
