--- a/pages/intranet.html
+++ b/pages/intranet.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/intranet.css">
 </head>
+
 <body>
     <header>
         <div class="header-logo">
             <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
         </div>
-          <input type="checkbox" id="menu-toggle" class="menu-toggle">
-          <label for="menu-toggle" class="menu-icon">☰</label>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">☰</label>
         <nav>
             <ul class="menu-principal">
                 <li><a href="/index.html">Inicio</a></li>
@@ -29,101 +31,101 @@
                 <div id="reloj"></div>
             </div>
         </nav>
-    </header> 
-    
+    </header>
+
     <main>
         <h1>PANEL DE ADMINISTRACION </h1>
 
-         <!-- SECCION DE PRODUCTOSn(desde la cabecera hasta el final)-->
-     <section class="container-tabla">
-        <button id="abrirModal">Crear</button>
-        <table class="container-productos">
-            <thead>
-                <tr>
-                    <th>Imagen</th>
-                    <th>Id</th>
-                    <th class="descrip">Descripción</th>
-                    <th>Categoria</th>
-                    <th>Precio</th>
-                    <th>Talla</th>
-                    <th>Stock</th>
-                    <th class="acciones">Acciones</th>
-                </tr>
-            </thead>
+        <!-- SECCION DE PRODUCTOSn(desde la cabecera hasta el final)-->
+        <section class="container-tabla">
+            <button id="abrirModal">Crear</button>
+            <table class="container-productos">
+                <thead>
+                    <tr>
+                        <th>Imagen</th>
+                        <th>Id</th>
+                        <th class="descrip">Descripción</th>
+                        <th>Categoria</th>
+                        <th>Precio</th>
+                        <th>Talla</th>
+                        <th>Stock</th>
+                        <th class="acciones">Acciones</th>
+                    </tr>
+                </thead>
 
-            <tbody class="productos-items">
-            </tbody>
-        </table>
-     </section>
-
-
-<!-- AQUI COLOCO LA MODAL ENVOLVIENDO AL FORMULARIO 
-  "esta se abre para crear, añadir o agregar" -->
-<div id="myModal" class="modal">
-  <div class="modal-content">
-    <span class="cerrar-modal">x</span>
-
-    <section class="agregar-producto">
-      <h3>Agregar Producto</h3>
-
-      <form class="formulario-productos">
-        <input type="hidden" id="id-oculto" value="">
-        <section class="campos-formularios">
-
-          <div class="campo">
-            <label for="productID">Producto ID</label>
-            <input id="productID" name="productID" type="text">
-          </div>
-
-          <div class="campo">
-            <label for="productName">Nombre</label>
-            <input id="productName" name="productName" type="text">
-          </div>
-
-          <div class="campo">
-            <label for="categoria">Categoría</label>
-            <select name="categoria" id="categoria">
-              <option value="">-----</option>
-              <option value="bolsos">Bolsos</option>
-              <option value="camisas">Camisas</option>
-              <option value="pantalones">Pantalones</option>
-              <option value="zapatos">Zapatos</option>
-            </select>
-          </div>
-
-          <div class="campo">
-            <label for="descripcion">Descripción</label>
-            <textarea name="descripcion" id="descripcion"></textarea>
-          </div>
-
-          <div class="campo">
-            <label for="precio">Precio</label>
-            <input id="precio" name="precio" type="number">
-          </div>
-
-          <div class="campo">
-            <label for="talla">Talla</label>
-            <input id="talla" name="talla" type="text">
-          </div>
-
-          <div class="campo">
-            <label for="stock">Stock</label>
-            <input id="stock" name="stock" type="number">
-          </div>
-
-          <div class="campo">
-            <label for="imagen">Imagen</label>
-            <input id="imagen" name="imagen" type="text" placeholder="ruta de la imagen">
-          </div>
+                <tbody class="productos-items">
+                </tbody>
+            </table>
         </section>
-      </form>
-      <div class="botones-modal">
-        <button id="cancelBtn" class="boton-modal">Cancelar</button>
-        <button id="guardarBtn"class="boton-modal"onclick="insertar()">Guardar</button>
-      </div>
-    </section>
-  </div>
-</div>
+
+
+        <!-- AQUI COLOCO LA MODAL ENVOLVIENDO AL FORMULARIO 
+  "esta se abre para crear, añadir o agregar" -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="cerrar-modal">x</span>
+
+                <section class="agregar-producto">
+                    <h3>Agregar Producto</h3>
+
+                    <form class="formulario-productos">
+                        <input type="hidden" id="id-oculto" value="">
+                        <section class="campos-formularios">
+
+                            <div class="campo">
+                                <label for="productID">Producto ID</label>
+                                <input id="productID" name="productID" type="text">
+                            </div>
+
+                            <div class="campo">
+                                <label for="productName">Nombre</label>
+                                <input id="productName" name="productName" type="text">
+                            </div>
+
+                            <div class="campo">
+                                <label for="categoria">Categoría</label>
+                                <select name="categoria" id="categoria">
+                                    <option value="">-----</option>
+                                    <option value="bolsos">Bolsos</option>
+                                    <option value="camisas">Camisas</option>
+                                    <option value="pantalones">Pantalones</option>
+                                    <option value="zapatos">Zapatos</option>
+                                </select>
+                            </div>
+
+                            <div class="campo">
+                                <label for="descripcion">Descripción</label>
+                                <textarea name="descripcion" id="descripcion"></textarea>
+                            </div>
+
+                            <div class="campo">
+                                <label for="precio">Precio</label>
+                                <input id="precio" name="precio" type="number">
+                            </div>
+
+                            <div class="campo">
+                                <label for="talla">Talla</label>
+                                <input id="talla" name="talla" type="text">
+                            </div>
+
+                            <div class="campo">
+                                <label for="stock">Stock</label>
+                                <input id="stock" name="stock" type="number">
+                            </div>
+
+                            <div class="campo">
+                                <label for="imagen">Imagen</label>
+                                <input id="imagen" name="imagen" type="text" placeholder="ruta de la imagen">
+                            </div>
+                        </section>
+                    </form>
+                    <div class="botones-modal">
+                        <button id="cancelBtn" class="boton-modal">Cancelar</button>
+                        <button id="guardarBtn" class="boton-modal" onclick="insertar()">Guardar</button>
+                    </div>
+                </section>
+            </div>
+        </div>
 
 
 
@@ -138,15 +140,18 @@
                     <figure class="footer-logo">
                         <img src="/assets/img/Logoretrodenda-provisional.webp" alt="">
                     </figure>
-                </div>  
+                </div>
             </section>
 
             <section class="footer-section-2">
                 <div>
                     <ul>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#cookies">Cookies</a></li>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Aviso Legal</a></li>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#privacidad">Privacidad</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#cookies">Cookies</a>
+                        </li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Aviso Legal</a>
+                        </li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a
+                                href="/pages/legal.html#privacidad">Privacidad</a></li>
                     </ul>
                 </div>
             </section>
@@ -154,7 +159,8 @@
         <section class="footer-section-3">
             <div class="footer-socials">
                 <div style="border-right: white 4px solid;padding-right: 1rem;">
-                    <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><i
+                            class="fa-brands fa-facebook-f"></i></a>
                 </div>
                 <div style="border-right: white 4px solid;padding-right: 1rem;">
                     <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -163,7 +169,8 @@
                     <a href="https://x.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                 </div>
                 <div style="border-right: white 4px solid;padding-right: 1rem;">
-                    <a href="https://www.youtube.com/?app=desktop&hl=es" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/?app=desktop&hl=es" target="_blank"><i
+                            class="fa-brands fa-youtube"></i></a>
                 </div>
                 <div>
                     <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
@@ -175,4 +182,5 @@
 
     <script src="../assets/js/intranet.js"></script>
 </body>
+
 </html>
