--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+ <link rel="shortcut icon" href="/assets/img/Logoretrodenda-provisional.webp" type="image/x-icon">
+  <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="/assets/css/style.css">
+
     <style>
         /*formulario*/
         form {
@@ -46,12 +51,33 @@
 </head>
 <body>
 
-    
+     <header>
+        <div class="header-logo">
+            <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
+        </div>
+          <input type="checkbox" id="menu-toggle" class="menu-toggle">
+          <label for="menu-toggle" class="menu-icon">☰</label>
+        <nav>
+            <ul class="menu-principal">
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+            </ul>
+
+            <div class="registro-cart">
+                <ul class="iconos-nav">
+                    <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
+                    <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <h1>Panel de adninistracion</h1>
 
 <form id="formulario-articulo">
     <input type="text" id="editar-produtID" placeholder="produtID" required>
     <input type="text" id="nombre-articulo" placeholder="Nombre del artículo" required>
     <input type="text" id="categoria-articulo" placeholder="Categoría" required>
+    <input type="text" id="editar-imagen" placeholder="imagen" required>
     <input type="text" id="talla-articulo" placeholder="Talla" required>
     <input type="text" id="descripcion-articulo" placeholder="Descripción" required>
     <input type="number" id="precio-articulo" placeholder="Precio" step="0.01" required>
@@ -76,6 +102,7 @@
             <input type="text" id="editar-produtID" placeholder="produtID" required>
             <input type="text" id="editar-categoria" placeholder="Categoría" required>
             <input type="text" id="editar-nombre" placeholder="Nombre" required>
+            <input type="text" id="editar-imagen" placeholder="imagen" required>
             <input type="number" id="editar-precio" placeholder="Precio" required>
             <input type="text" id="editar-descripcion" placeholder="Descripción" required>
             <input type="text" id="editar-talla" placeholder="Talla" required>
@@ -86,6 +113,52 @@
     </div>
 </div>
 
+
+ <!-- -------------------------------------------------------------------------------------------
+            DESDE AQUI COMIENZA EL FOOTER 
+-------------------------------------------------------------------------------------------------->
+    <footer>
+        <div class="footer-container">
+            <section class="footer-section-1">
+                <div>
+                    <h4 class="title-page">RetroDenda</h4>
+                    <figure class="footer-logo">
+                        <img src="/assets/img/Logoretrodenda-provisional.webp" alt="">
+                    </figure>
+                </div>  
+            </section>
+
+            <section class="footer-section-2">
+                <div>
+                    <ul>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#cookies">Cookies</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Aviso Legal</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#privacidad">Privacidad</a></li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <section class="footer-section-3">
+            <div class="footer-socials">
+                <div style="border-right: white 4px solid;padding-right: 1rem;">
+                    <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+                <div style="border-right: white 4px solid;padding-right: 1rem;">
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <div style="border-right: white 4px solid;padding-right: 1rem;">
+                    <a href="https://x.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+                <div style="border-right: white 4px solid;padding-right: 1rem;">
+                    <a href="https://www.youtube.com/?app=desktop&hl=es" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+                <div>
+                    <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <p>Copyright 2025 | Hilos i</p>
+        </section>
+    </footer>
     
     <!--<script type="module" src="../assets/js/admin_productos.js"></script>-->
     <script type="module" src="../assets/js/admin_productos_v2.js"></script>
