--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -8,49 +8,11 @@
   <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/assets/css/style.css">
+   <link rel="stylesheet" href="/assets/css/admin_productos.css">
 
-    <style>
-        /*formulario*/
-        form {
-            max-width: 300px;
-            margin: 2rem;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        }
-        form input{
-            display: block;
-            margin: 1rem;
-        }
-        form button{
-            display: block;
-            margin: 1rem;
-        }
-
-
-        /*modal*/
-    .modal {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.5);
-}
-
-.modal-contenido {
-    background: white;
-    padding: 20px;
-    width: 300px;
-    margin: 100px auto;
-    position: relative;
-}
-
-#cerrar-modal {
-    position: absolute;
-    right: 10px;
-    cursor: pointer;
-}
-    </style>
 </head>
 <body>
-
+    <!--nav-->
      <header>
         <div class="header-logo">
             <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
@@ -68,10 +30,13 @@
                     <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
                     <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
+                <div id="reloj"></div>
             </div>
         </nav>
     </header>
-    <h1>Panel de adninistracion</h1>
+    <h1>Panel de administracion</h1>
+
+<!--Añadir articulo-->
 
 <form id="formulario-articulo">
     <input type="text" id="editar-produtID" placeholder="produtID" required>
@@ -85,7 +50,9 @@
     <button type="submit">Añadir artículo</button>
 </form>
 
-<table id="contenedor" style="border: 1px solid black">
+
+<!--Tabla de productos-->
+<table id="contenedor" class="bordetabla">
  
 </table>
 
