--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -38,6 +38,7 @@
 
 <!--Añadir articulo-->
 
+<button type="button" id="cuadroanadir">Añadir artículo</button>
 <form id="formulario-articulo">
     <input type="text" id="editar-produtID" placeholder="produtID" required>
     <input type="text" id="nombre-articulo" placeholder="Nombre del artículo" required>
@@ -79,6 +80,7 @@
         </form>
     </div>
 </div>
+
 
 
  <!-- -------------------------------------------------------------------------------------------
