practica intranet funciona todo

--- a/pages/practica_intranet.html
+++ b/pages/practica_intranet.html
@@ -44,6 +44,7 @@
                     <tr>
                         <th>Imagen</th>
                         <th>Id</th>
+                        <th class="descrip">Nombre</th>
                         <th class="descrip">Descripción</th>
                         <th>Categoria</th>
                         <th>Precio</th>
@@ -180,7 +181,7 @@
         </section>
     </footer>
 
-    <script src="../assets/js/intranet.js"></script>
+    <script src="../assets/js/practica_intranet.js"></script>
 </body>
 
 </html>
