--- a/pages/intranet.html
+++ b/pages/intranet.html
@@ -44,6 +44,7 @@
                     <tr>
                         <th>Imagen</th>
                         <th>Id</th>
+                        <th class="descrip">Nombre</th>
                         <th class="descrip">Descripción</th>
                         <th>Categoria</th>
                         <th>Precio</th>
