--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -34,11 +34,13 @@
             </div>
         </nav>
     </header>
-    <h1>Panel de administracion</h1>
 
-<!--Añadir articulo-->
+    <div class="panel-header">
+        <h1>PANEL DE ADMINISTRACIÓN DE PRODUCTOS</h1>
+        <!--Añadir articulo-->
+        <button type="button" id="cuadroanadir">Añadir artículo</button>
+    </div>
 
-<button type="button" id="cuadroanadir">Añadir artículo</button>
 <form id="formulario-articulo">
     <input type="text" id="editar-produtID" placeholder="produtID" required>
     <input type="text" id="nombre-articulo" placeholder="Nombre del artículo" required>
