errores ortograficos corregidos

--- a/pages/admin_productos.html
+++ b/pages/admin_productos.html
@@ -42,7 +42,7 @@
     </div>
 
 <form id="formulario-articulo">
-    <input type="text" id="editar-produtID" placeholder="produtID" required>
+    <input type="number" id="editar-produtID" placeholder="produtID" required>
     <input type="text" id="nombre-articulo" placeholder="Nombre del artículo" required>
     <input type="text" id="categoria-articulo" placeholder="Categoría" required>
     <input type="text" id="editar-imagen" placeholder="imagen" required>
@@ -69,7 +69,7 @@
         <form id="form-editar">
             <input type="hidden" id="editar-id">
 
-            <input type="text" id="editar-produtID" placeholder="produtID" required>
+            <input type="number" id="editar-produtID" placeholder="produtID" required>
             <input type="text" id="editar-categoria" placeholder="Categoría" required>
             <input type="text" id="editar-nombre" placeholder="Nombre" required>
             <input type="text" id="editar-imagen" placeholder="imagen" required>
