--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <label for="menu-toggle" class="menu-icon">☰</label>
         <nav>
             <ul class="menu-principal">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="pages/productos.html">PRODUCTOS</a></li>
             </ul>
 
             <div class="registro-cart">
