style reediting - done

--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -17,22 +17,23 @@
     <!--barra navegacion-->
     <header>
         <div class="header-logo">
-            <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
+            <img src="../assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
         </div>
           <input type="checkbox" id="menu-toggle" class="menu-toggle">
           <label for="menu-toggle" class="menu-icon">☰</label>
         <nav>
             <ul class="menu-principal">
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
+                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="../pages/productos.html">PRODUCTOS</a></li>
             </ul>
 
             <div class="registro-cart">
                 <ul class="iconos-nav">
+                    <li><a href="/pages/intranet.html"><i class="fa-solid fa-user-tie"></i></a></li>
                     <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
                     <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
-                <div id="reloj">fgdgfgd</div>
+                <div id="reloj"></div>
             </div>
         </nav>
     </header>
