--- a/pages/intranet.html
+++ b/pages/intranet.html
@@ -13,18 +13,19 @@
 <body>
     <header>
         <div class="header-logo">
-            <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
+            <img src="../assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
         </div>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">☰</label>
+          <input type="checkbox" id="menu-toggle" class="menu-toggle">
+          <label for="menu-toggle" class="menu-icon">☰</label>
         <nav>
             <ul class="menu-principal">
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/pages/productos.html">Productos</a></li>
+                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="../pages/productos.html">PRODUCTOS</a></li>
             </ul>
 
             <div class="registro-cart">
                 <ul class="iconos-nav">
+                    <li><a href="/pages/intranet.html"><i class="fa-solid fa-user-tie"></i></a></li>
                     <li><a href="/pages/registro.html"><i class="fa-solid fa-circle-user"></i></a></li>
                     <li class="carrit"><a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
@@ -34,11 +35,14 @@
     </header>
 
     <main>
-        <h1>PANEL DE ADMINISTRACION </h1>
+        <h2>PANEL DE ADMINISTRACIÓN DE PRODUCTOS</h2>
+
+        <div class="area-boton-agregar">
+        <button id="abrirModal">+ Agregar nuevo producto</button>
+        </div>
 
         <!-- SECCION DE PRODUCTOSn(desde la cabecera hasta el final)-->
         <section class="container-tabla">
-            <button id="abrirModal">Crear</button>
             <table class="container-productos">
                 <thead>
                     <tr>
